# Claiming-System-main

./: README.md
backend/: Anchor.toml  README.md  package.json
backend/cli/: claiming.ts  script.ts  types.ts
backend/programs/claiming/: Cargo.toml
backend/programs/claiming/src/: account.rs  constants.rs  error.rs  lib.rs
backend/tests/: claiming.ts
frontend/: README.md  package.json
frontend/src/: config.tsx  privateFoxRarity.json
frontend/src/components/: AirdropDialog.tsx  ClaimDialog.tsx  Header.tsx  NFTCard.tsx  PageLoading.tsx  Progressbar.tsx
frontend/src/contexts/: claiming.ts  transaction.tsx  type.ts  utils.ts
frontend/src/pages/: 404.tsx  index.tsx
frontend/src/pages/claim/: index.tsx
frontend/src/styles/: _base.scss  _custom.scss  _fonts.scss  _spin.scss  _variant.scss  style.scss
