[package]
name = "claiming"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "claiming"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
anchor-spl = "0.25.0"
metaplex-token-metadata = { version = "0.0.1", features = ["no-entrypoint"] }
solana-program = "1.9.23"
spl-token = "3.3.0"

